[package]
name = "prudent-pots"
version = "2.0.1"
authors = ["Stefano Magini <magio.dev@protonmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = "1.5.4"
cosmwasm-schema = "1.5.4"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.59" }
cw721 = "0.18"
cw721-base = "0.18"
num_enum = "0.7.2"

[dev-dependencies]
cw-multi-test = "1.1.0"
